--- a/frontend/src/layout/Content/style/index.module.scss
+++ b/frontend/src/layout/Content/style/index.module.scss
@@ -3,6 +3,7 @@
   flex: 1;
   background-color: var(--content-bg);
   position: relative;
+  overflow: hidden;
 }
 
 .session-header {
@@ -17,6 +18,7 @@
 .content-list {
   padding-top: 24px;
   overflow-y: auto;
+  overflow-x: hidden;
   height: calc(100vh - 48px - var(--header-height) - 146px);
 }
 
